<?xml version="1.0"?>
<package format="2">
  <name>rapid_robot</name>
  <version>0.0.0</version>
  <description>Common functionality for ROS robots</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
