<?xml version="1.0"?>
<package format="2">
  <name>rapid_ros</name>
  <version>0.1.0</version>
  <description>ROS utilities for the rapid library.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rapid_ros</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>rapid_testing</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
